--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,4 @@
+<%# message_1 %>
 <%= turbo_frame_tag dom_id(message) do %>
   <div class="message" data-user-id="<%= message.user.id %>">
     <div class="message__header flex justify-between text-textColorMain">
