--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<%# user_1 %>
 <%= turbo_stream_from dom_id(current_user) %>
 <div class="flex flex-col h-full bg-secondaryBgColor">
   <div class="flex flex-col h-full text-white">
